sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	var i:Int=8;
	do{
		for(j<-0 to i){
			if(getValeur(j)>getValeur(j+1)){
				echange(j,j+1)
			}
		}
		i=i-1;
	}until(i=0)
}
